// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`translation directive > script-setup-alias 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(($setup.translation || _ctx.$t)("hello", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count) + " " + toDisplayString($setup.translation("hello")), 1)], 64);
}"
`;

exports[`translation directive > script-setup-global-option 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(($setup.t || _ctx.$t)("hello", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count) + " " + toDisplayString($setup.t("hello")), 1)], 64);
}"
`;

exports[`translation directive > script-setup-local-option 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(($setup.t || _ctx.$t)("count", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count) + " " + toDisplayString($setup.t("hello")), 1)], 64);
}"
`;

exports[`translation directive > script-setup-no-option 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(($setup.t || _ctx.$t)("hello", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count) + " " + toDisplayString($setup.t("hello")), 1)], 64);
}"
`;

exports[`translation directive > script-setup-no-use 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(_ctx.$t("hello", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count), 1)], 64);
}"
`;

exports[`translation directive > script-setup-obj 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(($setup.i18n.t || _ctx.$t)("hello", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count) + " " + toDisplayString($setup.i18n.t("hello")), 1)], 64);
}"
`;

exports[`translation directive > setup-alias 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(($setup.translation || _ctx.$t)("hello", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count) + " " + toDisplayString($setup.translation("hello")), 1)], 64);
}"
`;

exports[`translation directive > setup-global-option 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(($setup.t || _ctx.$t)("hello", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count) + " " + toDisplayString($setup.t("hello")), 1)], 64);
}"
`;

exports[`translation directive > setup-local-option 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(($setup.t || _ctx.$t)("count", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count) + " " + toDisplayString($setup.t("hello")), 1)], 64);
}"
`;

exports[`translation directive > setup-no-option 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(($setup.t || _ctx.$t)("hello", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count) + " " + toDisplayString($setup.t("hello")), 1)], 64);
}"
`;

exports[`translation directive > setup-no-use 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(_ctx.$t("hello", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count), 1)], 64);
}"
`;

exports[`translation directive > setup-return-alias 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(($setup.translation || _ctx.$t)("hello", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count) + " " + toDisplayString($setup.translation("hello")), 1)], 64);
}"
`;

exports[`translation directive > setup-return-alias-with-obj 1`] = `
"function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
	return openBlock(), createElementBlock(Fragment, null, [createBaseVNode("h1", null, toDisplayString(($setup.translation || _ctx.$t)("hello", {}, {})), 1), createBaseVNode("p", null, toDisplayString($setup.count) + " " + toDisplayString($setup.translation("hello")), 1)], 64);
}"
`;
